--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./index.js",
   "type": "module",
   "scripts": {
-    "test": "test",
+    "test": "mocha ./test/*.js",
+    "coverage": "nyc --all npm run test",
     "debug": "node --input-type=module --eval \"import {main} from './index.js'; console.log(main('Strength'));\""
   },
   "repository": {
@@ -23,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/hanschun/tarot-cards/issues"
   },
-  "homepage": "https://github.com/hanschun/tarot-cards#readme"
+  "homepage": "https://github.com/hanschun/tarot-cards#readme",
+  "devDependencies": {
+    "mocha": "^8.1.3",
+    "nyc": "^15.1.0"
+  }
 }
